# Mini-station-de-monitoring-environnemental

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/comm/: Protocol.cpp  Protocol.h  UartMock.h
src/core/: Logger.h  Scheduler.cpp  Scheduler.h
src/sensors/: ISensor.h  SensorManager.h  TemperatureSensor.cpp  TemperatureSensor.h
tests/: CMakeLists.txt
